--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-lliurex-sgbd (0.74-lliurex16) bionic; urgency=medium
+lliurex-sgbd (0.74+lliurex16) bionic; urgency=medium
 
   * Changed depend virtual-mysql-server with mysql-server
 
