--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-sgbd (0.79) focal; urgency=medium
+
+  * Added changes in .cnf file to avoid timeout
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 06 Jul 2021 11:23:44 +0200
+
 lliurex-sgbd (0.78) focal; urgency=medium
 
   * Changed mysql by mariadb in debian-db file template
